--- a/index2.html
+++ b/index2.html
@@ -771,7 +771,7 @@
         <div class="footer-row">
             <a class="footer-link" href="" style="text-align:left;">Terms and Service</a>
             <a class="footer-link" href="" style="text-align:center;">Privacy Policy</a>
-            <a class="footer-link" href="" style="text-align:right;">Contact Us</a>
+            <a class="footer-link" href="contact.html" style="text-align:right;">Contact Us</a>
         </div>
         <div class="footer-row copyright-row">
             <span class="footer-copyright">&copy; 2025 BatchBinder. All rights reserved.</span>
